--- a/StudyLastCore2/Views/Shared/_MenuUsuario.cshtml
+++ b/StudyLastCore2/Views/Shared/_MenuUsuario.cshtml
@@ -2,9 +2,11 @@
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="Carrito">Carrito</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="CreateItem">Crear Producto</a>
-    </li>
+    @if(Context.User.FindFirst(ClaimTypes.Role).Value == "admin") {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="CreateItem">Crear Producto</a>
+        </li>
+    }
     <li class="nav-item">
         <a class="nav-link btn btn-danger" asp-area="" asp-controller="Managed" asp-action="LogOut">LogOut</a>
     </li>
