--- a/StudyLastCore2/Views/Store/CreateItem.cshtml
+++ b/StudyLastCore2/Views/Store/CreateItem.cshtml
@@ -10,13 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateItem">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IdItem" class="control-label"></label>
-                <input asp-for="IdItem" class="form-control" name="IdItem"/>
-                <span asp-validation-for="IdItem" class="text-danger"></span>
-            </div>
+        <form asp-action="CreateItem" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" name="Name"/>
@@ -35,7 +29,6 @@
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
                 <input type="file" asp-for="Image" class="form-control" name="file" />
-                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
