--- a/StudyLastCore2/Views/_ViewImports.cshtml
+++ b/StudyLastCore2/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using StudyLastCore2
 @using StudyLastCore2.Models
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
